# ai-scoring

./: .env.example  .gitignore  README.md  pyproject.toml
config/: api_cost_estimates.yaml  company_aliases.yaml  company_domains.yaml  company_github_orgs.yaml  phase3_pilot_companies.yaml  platforms.yaml  source_freshness_ttl.yaml  validation_companies.yaml
docs/: AI Adoption Intelligence.txt  Implementation Plan for Data Collection Team.md  README.md  White Paper Plan.txt  change-log.md  data-collection-initial-plan.md  data-sources-investor-brief.md  data-sources.md  evidence-field-definitions.md  implementation-plan.md  on-demand-company-scoring.md  phase-1-development-plan.md  phase-2-implementation.md  phase-3-development-plan.md  phase-4-development-plan.md  post-phase-1-collection-outcomes-plan.md  project-control.md  scoring-methodology.md  setup.md
docs/coding standards/: AI_Scoring_Essential_Coding_Standards.md
docs/qa/: README.md  outcome-semantics-validation.md  phase-1-pilot-notes.md  phase-1-spot-check.md  phase-1-validation-run.md  phase-3-pilot-run.md  phase-3-sp500-run.md
docs/reference/: README.md
scripts/: example_run.sh  phase3_sp500_run.sh  sync_platform_docs.py
src/evidence_collection/: __init__.py  cli.py  config.py  costs.py  coverage_report.py  dates.py  exporters.py  extraction.py  freshness.py  freshness_report.py  http.py  logging_config.py  models.py  outcomes.py  platforms.py  registry_gate.py  reprocess.py  retry.py  runner.py  snapshot.py  sources.py  status.py  validation.py
src/inference/: __init__.py  (+3 more)
tests/: conftest.py
(+80 files in other folders)
