[project]
name = "ai-adoption-intelligence"
version = "0.2.0"
description = "Evidence Discovery Layer for the AI Adoption Intelligence Platform (collection) + inference."
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "pandas>=2.0.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "tenacity>=8.2.0",
  "tqdm>=4.66.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
ai-collect = "evidence_collection.cli:main"
ai-score = "inference.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
